# liblobby

./: CMakeLists.txt  ProtocolDescription.xml  README  xml2html.xsl
Examples/: FortuneBot.cpp
Examples/Clanbot/: ClanBot.cpp  ClanBot.h  main.cpp
Examples/ManBot/: main.cpp
src/: Client.cpp  Client.h  Message.cpp  Message.h  ProtocolHandler.cpp  ProtocolHandler.h  TASServer.cpp  TASServer.h  main.cpp
